<resources>
    <string name="app_name">A Note Editor</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="copy_all">Copy all</string>
    <string name="export_to_file">Export to file</string>
    <string name="order_by">Order by</string>
    <string name="sort_by">Sort by</string>
    <string name="privacy_header">Privacy</string>
    <string name="lock_title">Lock note after</string>
    <string name="lock_time_title">Lock note after</string>
    <string name="Notes_header">Notes</string>
    <string name="delete">Delete</string>
    <string name="action_open_file">Open file</string>
    <string name="action_share">Share</string>
    <string name="action_help">Help</string>
    <string name="error_occurred">Error occurred</string>
    <string name="share_text">Share text</string>
    <string name="action_share_app">Share App</string>
    <string name="delete_note_msg">Delete current note?\nYou won\'t be able to recover it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_edit_msg">You are leaving editing mode.\nWill like to save changes</string>
    <string name="exit_editing">"Exit editing "</string>
    <string name="saved">Saved</string>
    <string name="saving">Saving</string>
    <string name="opening">Opening</string>
    <string name="text_copied">Text copied </string>
    <string name="default_save_name">Note.txt</string>
    <string name="deleting">Deleting</string>
    <string name="exported_to">Exported to</string>
    <string name="exporting">Exporting</string>
    <string name="note_deleted">Note deleted</string>
    <string name="type_here">type here</string>
    <string name="save">Save note</string>
    <string name="back">Back</string>
    <string name="create_note">Create note</string>
    <string name="edit_note">Edit note</string>
    <string name="large_text">
Note edit app simple and secured for keeping text notes. It have the capability of exporting your text to file to be view on computer. Not leaving out ability to share with other Apps like  message, WhatApp, and Facebook e.t.c. Apart provide a good interface for typing, it also gives you ability open any file as text file to see it raw content as text. Creating notes can be from web directly by selecting what need and sharing it with the App(A Note Editor).
The app is aim at speed for manipulating simple notes.
How to use the app
The app have following interface

Start (Lock  app if enable)
Notes lists (initial view)
Reading mode
Editing mode
Settings
App Guide

Now open the app
Start (Lock  app if enable)
    This will require you to authenticate using your finger print pin or password word( Note: This interface is secured and we did not access to your password, pin, finger print or others we only receive  basic action in our code such as succeed or failed)
        Always enable security to prevent unwanted user accessing your  phone.
Functions available Note list view
       Press on add button to create new note(bottom center).
       Press on a note to read note (in reading mode you can edit by pressing the edit icon{pen})
       Press search icon(top right second icon) then type to search for notes(use to find note when notes list is much.
       Press options menu icon(top right first icon) to see the following options:
        Share App, ---> Share the app link with family and friends
        Open File, ---> Open any file as text file
        App Guid,  ---> See basic usage scenario
        Help,      --->  Open for more help
        Settings   --->  Change sorting, ordering and security preferences of the app

Functions available Note Editing mode
       press the check to save note and read without keyboard(that is to reading mode)
       press back arrow to end editing mode( prompt will be ask if you want to save changes)

Functions available in  note Reading mode
       press edit icon to edit note(bottom center)
       Press search icon(top right second icon) then type a word or sentence  to search for it occurrence in the note.
       Press options menu icon(top right first icon) then press:
              Export (to save note as text file)
              copy all (to copy note to clipboard so as to past it some where)
              share ( to share text with people using apps(like Message app, WhatApp app, Facebook, Email,e.t.c)
              delete(to completely remove the note)

Functions available in Settings
       select note list ordering (Order by: Ascending or Descending)
       select note list sorting(Sort by date created or modified)
       select security check/time(Require system password after 1 minute, 2 minute, 3 minute, 5 minutes or none)


Functions available App Guide
       App Guide will show once but can by reopen to show the basic function available


</string>
    <string name="opened">Opened</string>
    <string name="prompt_info_title">A Note Editor </string>
    <string name="prompt_info_subtitle">"Unlock with finger, pin or pattern "</string>
    <string name="prompt_info_description">App is lock. You can disable this in settings of this app. by setting lock after to \"never\"</string>
    <string name="prompt_info_use_app_password">Cancel</string>
    <string name="bio_en_title">Security Error</string>
    <string name="bio_en_msg">Hello, you are not using any security on your phone, our security depends on phone security.  Do you want to enable security?</string>
    <string name="settings_error_msg">"Unable to open Settings automatically to enable security. Please do it manually phone settings.  "</string>
    <string name="settings_error">Settings Error</string>
    <string name="note_not_exist">Note  does not exist in note list. Files cannot be deleted here, go to file manager</string>
    <string name="app_guide">App Guide</string>
    <string name="open_taking_much_time">open file taking much tim</string>
    <string name="stop">Stop</string>
    <string name="successfully_cancelled">Successfully cancelled</string>
    <string name="size_read">Size read</string>
    <string name="file_too_large">File too large</string>
    <string name="reading_mode">Reading mode</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_msg">You can always come to this guide by selecting App Guide in options menu of Note List.</string>
    <string name="slide_2_title">Notes List (main view)</string>
    <string name="slide_2_msg">Click on plus sign  to add note. Click on a note to  read. Click on search ico to search for not that contain the type word. Click on three vertical dot(Options menu) for more options</string>
    <string name="slide_02_title">Note List  … Options Menu</string>
    <string name="slide_02_msg"> Click on: Share ico(or Share App) to share this app link to share the others, Open File to open a file as text file in reading mode. App Guide to this guide, Help for online documentation, Settings( for security, sorting and ordering)</string>
    <string name="slide_3_title">Reading mode</string>
    <string name="slide_3_msg">Click on pen sign  to edit note. Search  ico  to search for a word in the note. Click on three vertical dot(Options menu) for more options</string>
    <string name="slide_03_title">Reading Mode  … Options Menu</string>
    <string name="slide_03_msg">"Export  to file(to save note as text file), copy all (to copy note to clipboard so as to past it some where), share ( to share text with people using apps(like Message app, WhatApp app, Facebook, Email,e.t.c), and delete(to completely remove the note)"</string>
    <string name="slide_4_title">Editing mode</string>
    <string name="slide_4_msg">Click on top right check  icon to save and exit editing mode. Click on a on top left icon to stop editing(you will ask if you want to save changes).</string>
   <string name="slide_6_title">Security Setting</string>
    <string name="slide_6_msg">Select settings in note list options menu. Enable security by selecting the enable security(never to others). This will ask for finger print authentication, pin or pattern on start of the App. </string>
    <string name="slide_7_title">Create note from other apps</string>
    <string name="slide_7_msg">Highlight text in chrome or any other app then click share in the app. List of app will be prompt to you. Select \'A Note Editor\' then it will take you to editing mode select check to save and continue with your action the other app. Or back if you intended to cancel the operation.</string>
    <string name="slide_8_title">… Let get started</string>
    <string name="slide_8_msg">\"You can always reach us at raphaelraymondproduct@gmail.com.\nDon\'t forget to send us feedback at the email.</string>
    <string name="open_notes">Open Notes</string>
    <string name="no_security_msg">The phone have no security</string>
</resources>