<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.raphnote.MainActivity">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy_all"
        android:orderInCategory="100"
        android:title="@string/copy_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_text"
        android:orderInCategory="100"
        android:title="@string/share_text"
        app:showAsAction="never" />
    <item
    android:id="@+id/action_export"
    android:orderInCategory="100"
    android:title="@string/export_to_file"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>