<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.softcare.raphnote.MainActivity">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_open_file"
        android:orderInCategory="100"
        android:title="@string/action_open_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_app_guide"
        android:orderInCategory="100"
        android:title="@string/app_guide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>